--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<tomee.classifier>webprofile</tomee.classifier>
 		<tomee.version>1.5.1</tomee.version>
+<javaee6.spec.version>3.0.2.Final</javaee6.spec.version>
+
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -32,6 +34,14 @@
 				<artifactId>slf4j-jdk14</artifactId>
 				<version>1.7.2</version>
 			</dependency>
+      <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-6.0</artifactId>
+            <version>${javaee6.spec.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+          </dependency>
+
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -71,6 +81,23 @@
 			<version>2.1.10</version>
 			<scope>provided</scope>
 		</dependency>
+   <dependency>
+          <groupId>javax.enterprise</groupId>
+          <artifactId>cdi-api</artifactId>
+          <scope>provided</scope>
+        </dependency>
+     <dependency>
+         <groupId>org.jboss.spec.javax.ejb</groupId>
+         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+          <scope>provided</scope>
+      </dependency>
+
+    <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <version>1.0.1.Final</version>
+         <scope>provided</scope>
+      </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -82,6 +109,7 @@
 			<artifactId>arquillian-junit-container</artifactId>
 			<scope>test</scope>
 		</dependency>
+  <!--
 		<dependency>
 			<groupId>org.apache.openejb</groupId>
 			<artifactId>arquillian-tomee-remote</artifactId>
@@ -96,6 +124,7 @@
 			<type>zip</type>
 			<scope>test</scope>
 		</dependency>
+-->
 		<dependency>
 			<groupId>org.jboss.arquillian.extension</groupId>
 			<artifactId>arquillian-persistence-impl</artifactId>
