--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ch.frankel.blog.tomee</groupId>
+	<groupId>org.picketlink.quickstarts</groupId>
 	<artifactId>petcatalog</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -10,10 +10,27 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-                <javaee6.spec.version>3.0.2.Final</javaee6.spec.version>
+        <javaee6.spec.version>3.0.2.Final</javaee6.spec.version>
+        <!-- Define the version of the JBoss BOMs we want to import to specify tested stacks. -->
+        <version.jboss.bom>1.0.7.CR2</version.jboss.bom>
 	</properties>
 	<dependencyManagement>
-		<dependencies>
+            <dependencies>
+                <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
+                <!-- JBoss distributes a complete set of Java EE 6 APIs including
+    a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or
+    a collection) of artifacts. We use this here so that we always get the correct
+    versions of artifacts. Here we use the jboss-javaee-6.0-with-security stack
+    (you can read this as the JBoss stack of the Java EE 6 APIs with Security).
+    You can actually use this stack with any version of JBoss AS that implements
+    Java EE 6, not just JBoss AS 7! -->
+                <dependency>
+                    <groupId>org.jboss.bom</groupId>
+                    <artifactId>jboss-javaee-6.0-with-security</artifactId>
+                    <version>${version.jboss.bom}</version>
+                    <type>pom</type>
+                    <scope>import</scope>
+                </dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
@@ -51,28 +68,68 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12.4</version>
-				<configuration>
-					<systemPropertyVariables>
-						<tomee.classifier>${tomee.classifier}</tomee.classifier>
-						<tomee.version>${tomee.version}</tomee.version>
-					</systemPropertyVariables>
-					<forkMode>once</forkMode>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
-		<dependency>
+        <!-- Import the CDI API, we use provided scope as the API is included in JBoss AS 7 -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Import the Common Annotations API (JSR-250), we use provided scope
+as the API is included in JBoss AS 7 -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Import the JSF API, we use provided scope as the API is included
+in JBoss AS 7 -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.faces</groupId>
+            <artifactId>jboss-jsf-api_2.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Import the PicketLink API, we deploy this as library with the application,
+and can compile against it -->
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-api</artifactId>
+            <version>2.5.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Import the PicketLink implementation, we deploy this as library with the application,
+but can't compile against it -->
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-impl</artifactId>
+            <version>2.5.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-idm-schema</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+		<!--<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
 			<artifactId>myfaces-api</artifactId>
 			<version>2.1.10</version>
@@ -100,6 +157,6 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 </project>
